# home-hunts

./: .gitignore  README.md  pyproject.toml
clueapp/: app.py  config.py  main.py  theme.py  utils.py
clueapp/app_builder/: __init__.py  app_builder.py  definition_model.py
clueapp/resources/: styles.tcss
clueapp/resources/games/demo/: definition.yml
clueapp/widgets/: __init__.py  clue.py  lock.py  matrix.py  text_with_file.py
