[project]
name = "home-hunts"
version = "0.1.0"
description = "Homemade treasure hunts and escape rooms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "textual>=1.0.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.0", "textual-dev>=1.7.0"]

[tool.mypy]
strict = true
ignore_missing_imports = true
